--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
   - 1.14.x
 before_install:
   - curl -fsSL https://deb.nodesource.com/setup_12.x | sudo -E bash -
-  - sudo apt-get install -y upx nodejs npm
+  - sudo apt-get install -y upx nodejs
   - sudo npm install --global yarn
 addons:
   apt:
