--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
 before_install:
   - curl -fsSL https://deb.nodesource.com/setup_12.x | sudo -E bash -
   - sudo apt-get install -y upx nodejs
-  - sudo npm install --global yarn@1.22.10 webpack@4.46.0 webpack-cli@4.6.0 webpack-dev-server@3.11.2 gulp-cli
+  - sudo npm install --global yarn@1.22.10 webpack@4.46.0 webpack-cli@4.6.0 webpack-dev-server@3.11.2 webpack-merge gulp-cli
   
 addons:
   apt:
