--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ go:
   - 1.13.x
   - 1.14.x
 before_install:
-  - sudo apt-get uninstall node
+  - sudo apt-get purge nodejs
   - curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
   - sudo apt-get install -y upx nodejs
   - sudo npm install --global yarn
