--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: go
+node_js: 
+  - node
 go:
   - 1.13.x
   - 1.14.x
 before_install:
-  - sudo apt-get purge nodejs
-  - curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-  - sudo apt-get install -y upx nodejs
+  # - sudo apt-get purge nodejs
+  # - curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+  - sudo apt-get install -y upx
   - sudo npm install --global yarn
-  
 addons:
   apt:
     update: true
