--- a/html/ttyd/package.json
+++ b/html/ttyd/package.json
@@ -61,7 +61,8 @@
         "webpack": "4.46.0",
         "webpack-cli": "^4.6.0",
         "webpack-dev-server": "^3.11.2",
-        "webpack-merge": "^5.7.3"
+        "webpack-merge": "^5.7.3",
+        "yarn-audit-fix": "^6.3.5"
     },
     "dependencies": {
         "backoff": "^2.5.0",
